--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "repository": "git@github.com:loadimpact/k6-js-lib.git",
   "author": "Simon Legander <simon.legander@gmail.com>",
+  "scripts": {
+    "test": "k6 run tests/basic.js -u 1 -i 1"
+  },
   "dependencies": {
     "jsonpath": "^1.0.2",
     "papaparse": "^5.0.0"
