--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/k6-js-lib
+      - restore_cache:
+          keys:
+            - v1-dependency-cache-{{ checksum "supported.json" }}
       - run:
           name: Install awscli
           command: sudo pip install awscli
@@ -23,6 +26,10 @@ jobs:
             curl -O -L https://github.com/loadimpact/k6/releases/download/v0.24.0/k6-v0.24.0-linux64.tar.gz;
             tar -xvzf k6-v0.24.0-linux64.tar.gz;
             mv k6-v0.24.0-linux64/k6 ~/k6-js-lib/k6
+      - save_cache:
+          key: v1-dependency-cache-{{ checksum "supported.json" }}
+          paths:
+            - k6
       - persist_to_workspace:
           root: ~/k6-js-lib
           paths:
@@ -39,10 +46,6 @@ jobs:
   deploy:
     <<: *defaults
     steps:
-      - persist_to_workspace:
-          root: ~/k6-js-lib
-          paths:
-            - deploy.sh
       - run:
           name: Deploy lib to s3
           command: ~/k6-js-lib/deploy.sh
