--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "form-urlencoded": "^3.0.0",
-    "jsonpath": "^1.0.2"
+    "jsonpath": "^1.0.2",
+    "kahwah": "^0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
