Change CircleCI deployment filter to target main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,4 +78,4 @@ workflows:
             - test-base
           filters:
             branches:
-              only: master
+              only: main 
