--- a/.github/workflows/issue-auto-assign.yml
+++ b/.github/workflows/issue-auto-assign.yml
@@ -21,7 +21,7 @@ jobs:
             const assigneeCount = 1;
             
             const core = {
-              assignees: ['mstoykov', 'codebien', 'olegbespalov', 'oleiade', 'joanlopez'],
+              assignees: ['mstoykov', 'codebien', 'oleiade', 'joanlopez', 'inancgumus'],
               keywords: ['utils', 'summary', 'httpx', 'url'],
             }
             const frontend = {
