--- a/.github/workflows/issue-auto-assign.yml
+++ b/.github/workflows/issue-auto-assign.yml
@@ -21,7 +21,7 @@ jobs:
             const assigneeCount = 1;
             
             const k6engine = {
-              assignees: ['mstoykov', 'codebien', 'oleiade', 'joanlopez', 'inancgumus'],
+              assignees: ['ankur22', 'mstoykov', 'codebien', 'oleiade', 'joanlopez', 'inancgumus'],
               keywords: ['utils', 'summary', 'httpx', 'url'],
             }
             const k6frontend = {
