Fix issue-auto-assign workflow + readd ankur22 to the k6engine list (#153)
Previously it was throwing an exception as `core` was the import of
`@actions/core`.

As part of the renaming I decided to make it slightly more consistent,
just in case `frontend` also ends up being something that is already
defined as well.

Closes #152

Co-authored-by: Ankur <akahank@gmail.com>

--- a/.github/workflows/issue-auto-assign.yml
+++ b/.github/workflows/issue-auto-assign.yml
@@ -20,16 +20,16 @@ jobs:
           script: |
             const assigneeCount = 1;
             
-            const core = {
-              assignees: ['mstoykov', 'codebien', 'oleiade', 'joanlopez', 'inancgumus'],
+            const k6engine = {
+              assignees: ['ankur22', 'mstoykov', 'codebien', 'oleiade', 'joanlopez', 'inancgumus'],
               keywords: ['utils', 'summary', 'httpx', 'url'],
             }
-            const frontend = {
+            const k6frontend = {
               assignees: ['legander', 'w1kman', 'allansson', 'going-confetti', '2Steaks', 'e-fisher', 'EdvinasDaugirdas'],
               keywords: ['jsonpath', 'urlencoded', 'chaijs', 'paparse', 'ajv'],
             }
             
-            const teams = [core, frontend]
+            const teams = [k6engine, k6frontend]
             const allAssignees = teams.flatMap((team) => team.assignees);
 
             // Do not automatically assign users if someone was already assigned or it was opened by a maintainer
