--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: download k6 binary
-        run:  curl -fsSL https://github.com/grafana/k6/releases/download/v0.54.0/k6-v1.0.0-linux-amd64.tar.gz | tar -xvz
+        run:  curl -fsSL https://github.com/grafana/k6/releases/download/v0.54.0/k6-v0.54.0-linux-amd64.tar.gz | tar -xvz
 
       - name: move downloaded k6 binary to current directory
         run: mv k6-*/k6 .
@@ -26,8 +26,9 @@ jobs:
 
   test-base:
     needs: setup
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       
@@ -44,8 +45,9 @@ jobs:
 
   test-extended:
     needs: setup
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
