Replace the not functional httpbin.k6.io service

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: download k6 binary
-        run:  curl -fsSL https://github.com/grafana/k6/releases/download/v0.54.0/k6-v0.54.0-linux-amd64.tar.gz | tar -xvz
+        run: curl -fsSL https://github.com/grafana/k6/releases/download/v1.0.0/k6-v1.0.0-linux-amd64.tar.gz | tar -xvz
 
       - name: move downloaded k6 binary to current directory
         run: mv k6-*/k6 .
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Download k6 binary
         uses: actions/download-artifact@v4
         with:
@@ -41,7 +41,7 @@ jobs:
         run: chmod +x k6
 
       - name: Run tests with compatibility-mode=base
-        run: ./k6 run --compatibility-mode=base tests/testSuiteBase.js
+        run: ./k6 run tests/testSuiteBase.js
 
   test-extended:
     needs: setup
